intTests/test_type_errors/unify006.log.good
Loading file "unify006.saw"
Type errors:
  unify006.saw:7:22-7:23: Error: Type mismatch.
    Expected: Bool
    Found:    Int

  unify006.saw:7:22-7:23: Note: The type Bool arises from the context of the term
  unify006.saw:7:12-7:15: Note: The type Int arises from this type annotation


FAILED
